Assign and style blue-num id
This is from the exercise ./foundations/02-class-id-selectors.

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: #ffb8c2;
     font-family: 'JetBrainsMono Nerd Font', 'Dejavu Sans', sans-serif;
 }
+
+#blue-num {
+    color: #0000ff;
+    font-size: 36px;
+}
