--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -3,6 +3,10 @@
     font-family: 'JetBrainsMono Nerd Font', 'Dejavu Sans', sans-serif;
 }
 
+.fs-24 {
+    font-size: 24px;
+}
+
 #blue-num {
     color: #0000ff;
     font-size: 36px;
