--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,3 +1,9 @@
+.btn-black,
+.btn-yellow {
+  font-size: 28px;
+  font-family: "Quiapo Free", "Times New Roman", sans-serif;
+}
+
 .btn-black {
   background-color: hsl(0, 0%, 0%);
   color: hsl(0, 0%, 100%);
