Add new css rule that contains same style/s for .title, .content and .button-container
This is from the exercise ./margin-and-padding/02-margin-and-padding-2.

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -10,14 +10,8 @@ body {
   padding: 8px;
 }
 
-.title {
-  background: #e3f4ff;
-}
-
-.content {
-  background: #e3f4ff;
-}
-
+.title,
+.content,
 .button-container {
   background: #e3f4ff;
 }
