--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -30,6 +30,11 @@ body {
   padding: 16px 8px;
 }
 
+.button-container {
+  text-align: center;
+  padding: 8px;
+}
+
 button {
   background: white;
   border: 1px solid #eee;
