--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -17,6 +17,8 @@
 
 ul {
   /* this removes the dots on the list items*/
+  display: flex;
+  gap: 9px;
   list-style-type: none;
   margin: 0;
   padding: 0;
